# loopia-autoupdate

./: loopia-autoupdate.service  loopia-autoupdate.timer  loopia_autoupdate.py  setup.cfg
