[metadata]
name = loopia-autoupdate
version = 0.1.0
author = Rasmus Bondesson
author_email = raek@raek.se
url = https://github.com/raek/loopia-autoupdate
description = Unofficial tool to automatically update DNS records on Loopia to current external IP
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: No Input/Output (Daemon)
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Topic :: Internet :: Name Service (DNS)
    Topic :: System :: Networking
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
py_modules = loopia_autoupdate
python_requires = >= 3.6
install_requires =
    appdirs
    loopialib
    pydantic

[options.entry_points]
console_scripts =
    loopia-autoupdate = loopia_autoupdate:main

[flake8]
max_line_length = 120